parser.output
   0  $accept : %entry% $end

   1  start : expr EOF

   2  simple_expr : UNIT
   3              | INT
   4              | WHAT
   5              | IDENT
   6              | TRUE
   7              | FALSE
   8              | LPAREN exprlist RPAREN
   9              | LPAREN expr COMMA expr RPAREN
  10              | NOT simple_expr
  11              | BANG simple_expr
  12              | REF simple_expr
  13              | simple_expr simple_expr

  14  expr : simple_expr
  15       | SUB expr
  16       | expr ADD expr
  17       | expr SUB expr
  18       | expr MUL expr
  19       | expr DIV expr
  20       | expr MOD expr
  21       | expr LT expr
  22       | expr EQUAL expr
  23       | expr ANDOP expr
  24       | expr OROP expr
  25       | expr ASSIGN expr
  26       | WHILE expr DO simple_expr
  27       | IF expr THEN expr ELSE expr
  28       | FST expr
  29       | SND expr
  30       | INL texpr expr
  31       | INR texpr expr
  32       | FUN LPAREN args_fun RPAREN ARROW expr
  33       | CASE expr OF INL LPAREN args_fun RPAREN ARROW expr BAR INR LPAREN args_fun RPAREN ARROW expr
  34       | LET decllist IN expr END

  35  arg : IDENT COLON texpr

  36  args_let : arg
  37           | LPAREN args_let COMMA args_let RPAREN

  38  args_fun : arg
  39           | args_let COMMA args_let

  40  decl : args_let EQUAL expr
  41       | IDENT LPAREN args_fun RPAREN COLON texpr EQUAL expr

  42  decllist : decl
  43           | decl SEMICOLON decllist

  44  exprlist : expr
  45           | expr SEMICOLON exprlist

  46  texpr : BOOL
  47        | INTTYPE
  48        | UNITTYPE
  49        | texpr ARROW texpr
  50        | texpr MUL texpr
  51        | texpr ADD texpr
  52        | texpr REF
  53        | LPAREN texpr RPAREN

  54  %entry% : '\001' start

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . start  (54)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	start  goto 23
	simple_expr  goto 24
	expr  goto 25


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	simple_expr : INT .  (3)

	.  reduce 3


state 4
	simple_expr : IDENT .  (5)

	.  reduce 5


state 5
	simple_expr : LPAREN . exprlist RPAREN  (8)
	simple_expr : LPAREN . expr COMMA expr RPAREN  (9)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 26
	exprlist  goto 27


state 6
	expr : SUB . expr  (15)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 28


state 7
	simple_expr : NOT . simple_expr  (10)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	REF  shift 20
	BANG  shift 21
	.  error

	simple_expr  goto 29


state 8
	simple_expr : WHAT .  (4)

	.  reduce 4


state 9
	simple_expr : UNIT .  (2)

	.  reduce 2


state 10
	simple_expr : TRUE .  (6)

	.  reduce 6


state 11
	simple_expr : FALSE .  (7)

	.  reduce 7


state 12
	expr : IF . expr THEN expr ELSE expr  (27)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 30


state 13
	expr : LET . decllist IN expr END  (34)

	IDENT  shift 31
	LPAREN  shift 32
	.  error

	decllist  goto 33
	arg  goto 34
	args_let  goto 35
	decl  goto 36


state 14
	expr : INL . texpr expr  (30)

	LPAREN  shift 37
	BOOL  shift 38
	INTTYPE  shift 39
	UNITTYPE  shift 40
	.  error

	texpr  goto 41


state 15
	expr : INR . texpr expr  (31)

	LPAREN  shift 37
	BOOL  shift 38
	INTTYPE  shift 39
	UNITTYPE  shift 40
	.  error

	texpr  goto 42


state 16
	expr : FST . expr  (28)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 43


state 17
	expr : SND . expr  (29)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 44


state 18
	expr : FUN . LPAREN args_fun RPAREN ARROW expr  (32)

	LPAREN  shift 45
	.  error


state 19
	expr : CASE . expr OF INL LPAREN args_fun RPAREN ARROW expr BAR INR LPAREN args_fun RPAREN ARROW expr  (33)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 46


state 20
	simple_expr : REF . simple_expr  (12)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	REF  shift 20
	BANG  shift 21
	.  error

	simple_expr  goto 47


state 21
	simple_expr : BANG . simple_expr  (11)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	REF  shift 20
	BANG  shift 21
	.  error

	simple_expr  goto 48


state 22
	expr : WHILE . expr DO simple_expr  (26)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 49


state 23
	%entry% : '\001' start .  (54)

	.  reduce 54


state 24
	simple_expr : simple_expr . simple_expr  (13)
	expr : simple_expr .  (14)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	REF  shift 20
	BANG  shift 21
	EOF  reduce 14
	RPAREN  reduce 14
	COMMA  reduce 14
	SEMICOLON  reduce 14
	ADD  reduce 14
	SUB  reduce 14
	MUL  reduce 14
	DIV  reduce 14
	MOD  reduce 14
	EQUAL  reduce 14
	LT  reduce 14
	ANDOP  reduce 14
	OROP  reduce 14
	THEN  reduce 14
	ELSE  reduce 14
	IN  reduce 14
	END  reduce 14
	BAR  reduce 14
	OF  reduce 14
	ASSIGN  reduce 14
	DO  reduce 14

	simple_expr  goto 50


state 25
	start : expr . EOF  (1)
	expr : expr . ADD expr  (16)
	expr : expr . SUB expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . MOD expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . EQUAL expr  (22)
	expr : expr . ANDOP expr  (23)
	expr : expr . OROP expr  (24)
	expr : expr . ASSIGN expr  (25)

	EOF  shift 51
	ADD  shift 52
	SUB  shift 53
	MUL  shift 54
	DIV  shift 55
	MOD  shift 56
	EQUAL  shift 57
	LT  shift 58
	ANDOP  shift 59
	OROP  shift 60
	ASSIGN  shift 61
	.  error


state 26
	simple_expr : LPAREN expr . COMMA expr RPAREN  (9)
	expr : expr . ADD expr  (16)
	expr : expr . SUB expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . MOD expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . EQUAL expr  (22)
	expr : expr . ANDOP expr  (23)
	expr : expr . OROP expr  (24)
	expr : expr . ASSIGN expr  (25)
	exprlist : expr .  (44)
	exprlist : expr . SEMICOLON exprlist  (45)

	COMMA  shift 62
	SEMICOLON  shift 63
	ADD  shift 52
	SUB  shift 53
	MUL  shift 54
	DIV  shift 55
	MOD  shift 56
	EQUAL  shift 57
	LT  shift 58
	ANDOP  shift 59
	OROP  shift 60
	ASSIGN  shift 61
	RPAREN  reduce 44


state 27
	simple_expr : LPAREN exprlist . RPAREN  (8)

	RPAREN  shift 64
	.  error


state 28
	expr : SUB expr .  (15)
	expr : expr . ADD expr  (16)
	expr : expr . SUB expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . MOD expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . EQUAL expr  (22)
	expr : expr . ANDOP expr  (23)
	expr : expr . OROP expr  (24)
	expr : expr . ASSIGN expr  (25)

	.  reduce 15


state 29
	simple_expr : NOT simple_expr .  (10)
	simple_expr : simple_expr . simple_expr  (13)

	.  reduce 10

	simple_expr  goto 50


state 30
	expr : expr . ADD expr  (16)
	expr : expr . SUB expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . MOD expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . EQUAL expr  (22)
	expr : expr . ANDOP expr  (23)
	expr : expr . OROP expr  (24)
	expr : expr . ASSIGN expr  (25)
	expr : IF expr . THEN expr ELSE expr  (27)

	ADD  shift 52
	SUB  shift 53
	MUL  shift 54
	DIV  shift 55
	MOD  shift 56
	EQUAL  shift 57
	LT  shift 58
	ANDOP  shift 59
	OROP  shift 60
	THEN  shift 65
	ASSIGN  shift 61
	.  error


state 31
	arg : IDENT . COLON texpr  (35)
	decl : IDENT . LPAREN args_fun RPAREN COLON texpr EQUAL expr  (41)

	LPAREN  shift 66
	COLON  shift 67
	.  error


state 32
	args_let : LPAREN . args_let COMMA args_let RPAREN  (37)

	IDENT  shift 68
	LPAREN  shift 32
	.  error

	arg  goto 34
	args_let  goto 69


state 33
	expr : LET decllist . IN expr END  (34)

	IN  shift 70
	.  error


state 34
	args_let : arg .  (36)

	.  reduce 36


state 35
	decl : args_let . EQUAL expr  (40)

	EQUAL  shift 71
	.  error


state 36
	decllist : decl .  (42)
	decllist : decl . SEMICOLON decllist  (43)

	SEMICOLON  shift 72
	IN  reduce 42


state 37
	texpr : LPAREN . texpr RPAREN  (53)

	LPAREN  shift 37
	BOOL  shift 38
	INTTYPE  shift 39
	UNITTYPE  shift 40
	.  error

	texpr  goto 73


state 38
	texpr : BOOL .  (46)

	.  reduce 46


state 39
	texpr : INTTYPE .  (47)

	.  reduce 47


state 40
	texpr : UNITTYPE .  (48)

	.  reduce 48


state 41
	expr : INL texpr . expr  (30)
	texpr : texpr . ARROW texpr  (49)
	texpr : texpr . MUL texpr  (50)
	texpr : texpr . ADD texpr  (51)
	texpr : texpr . REF  (52)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	ADD  shift 74
	SUB  shift 6
	MUL  shift 75
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	ARROW  shift 76
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 77
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 78


state 42
	expr : INR texpr . expr  (31)
	texpr : texpr . ARROW texpr  (49)
	texpr : texpr . MUL texpr  (50)
	texpr : texpr . ADD texpr  (51)
	texpr : texpr . REF  (52)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	ADD  shift 74
	SUB  shift 6
	MUL  shift 75
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	ARROW  shift 76
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 77
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 79


state 43
	expr : expr . ADD expr  (16)
	expr : expr . SUB expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . MOD expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . EQUAL expr  (22)
	expr : expr . ANDOP expr  (23)
	expr : expr . OROP expr  (24)
	expr : expr . ASSIGN expr  (25)
	expr : FST expr .  (28)

	.  reduce 28


state 44
	expr : expr . ADD expr  (16)
	expr : expr . SUB expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . MOD expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . EQUAL expr  (22)
	expr : expr . ANDOP expr  (23)
	expr : expr . OROP expr  (24)
	expr : expr . ASSIGN expr  (25)
	expr : SND expr .  (29)

	.  reduce 29


state 45
	expr : FUN LPAREN . args_fun RPAREN ARROW expr  (32)

	IDENT  shift 68
	LPAREN  shift 32
	.  error

	args_fun  goto 80
	arg  goto 81
	args_let  goto 82


state 46
	expr : expr . ADD expr  (16)
	expr : expr . SUB expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . MOD expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . EQUAL expr  (22)
	expr : expr . ANDOP expr  (23)
	expr : expr . OROP expr  (24)
	expr : expr . ASSIGN expr  (25)
	expr : CASE expr . OF INL LPAREN args_fun RPAREN ARROW expr BAR INR LPAREN args_fun RPAREN ARROW expr  (33)

	ADD  shift 52
	SUB  shift 53
	MUL  shift 54
	DIV  shift 55
	MOD  shift 56
	EQUAL  shift 57
	LT  shift 58
	ANDOP  shift 59
	OROP  shift 60
	OF  shift 83
	ASSIGN  shift 61
	.  error


state 47
	simple_expr : REF simple_expr .  (12)
	simple_expr : simple_expr . simple_expr  (13)

	.  reduce 12

	simple_expr  goto 50


state 48
	simple_expr : BANG simple_expr .  (11)
	simple_expr : simple_expr . simple_expr  (13)

	.  reduce 11

	simple_expr  goto 50


state 49
	expr : expr . ADD expr  (16)
	expr : expr . SUB expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . MOD expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . EQUAL expr  (22)
	expr : expr . ANDOP expr  (23)
	expr : expr . OROP expr  (24)
	expr : expr . ASSIGN expr  (25)
	expr : WHILE expr . DO simple_expr  (26)

	ADD  shift 52
	SUB  shift 53
	MUL  shift 54
	DIV  shift 55
	MOD  shift 56
	EQUAL  shift 57
	LT  shift 58
	ANDOP  shift 59
	OROP  shift 60
	ASSIGN  shift 61
	DO  shift 84
	.  error


state 50
	simple_expr : simple_expr . simple_expr  (13)
	simple_expr : simple_expr simple_expr .  (13)

	.  reduce 13

	simple_expr  goto 50


state 51
	start : expr EOF .  (1)

	.  reduce 1


state 52
	expr : expr ADD . expr  (16)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 85


state 53
	expr : expr SUB . expr  (17)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 86


state 54
	expr : expr MUL . expr  (18)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 87


state 55
	expr : expr DIV . expr  (19)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 88


state 56
	expr : expr MOD . expr  (20)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 89


state 57
	expr : expr EQUAL . expr  (22)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 90


state 58
	expr : expr LT . expr  (21)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 91


state 59
	expr : expr ANDOP . expr  (23)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 92


state 60
	expr : expr OROP . expr  (24)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 93


state 61
	expr : expr ASSIGN . expr  (25)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 94


state 62
	simple_expr : LPAREN expr COMMA . expr RPAREN  (9)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 95


state 63
	exprlist : expr SEMICOLON . exprlist  (45)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 96
	exprlist  goto 97


state 64
	simple_expr : LPAREN exprlist RPAREN .  (8)

	.  reduce 8


state 65
	expr : IF expr THEN . expr ELSE expr  (27)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 98


state 66
	decl : IDENT LPAREN . args_fun RPAREN COLON texpr EQUAL expr  (41)

	IDENT  shift 68
	LPAREN  shift 32
	.  error

	args_fun  goto 99
	arg  goto 81
	args_let  goto 82


state 67
	arg : IDENT COLON . texpr  (35)

	LPAREN  shift 37
	BOOL  shift 38
	INTTYPE  shift 39
	UNITTYPE  shift 40
	.  error

	texpr  goto 100


state 68
	arg : IDENT . COLON texpr  (35)

	COLON  shift 67
	.  error


state 69
	args_let : LPAREN args_let . COMMA args_let RPAREN  (37)

	COMMA  shift 101
	.  error


state 70
	expr : LET decllist IN . expr END  (34)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 102


state 71
	decl : args_let EQUAL . expr  (40)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	SUB  shift 6
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	IF  shift 12
	LET  shift 13
	INL  shift 14
	INR  shift 15
	FST  shift 16
	SND  shift 17
	FUN  shift 18
	CASE  shift 19
	REF  shift 20
	BANG  shift 21
	WHILE  shift 22
	.  error

	simple_expr  goto 24
	expr  goto 103


state 72
	decllist : decl SEMICOLON . decllist  (43)

	IDENT  shift 31
	LPAREN  shift 32
	.  error

	decllist  goto 104
	arg  goto 34
	args_let  goto 35
	decl  goto 36


state 73
	texpr : texpr . ARROW texpr  (49)
	texpr : texpr . MUL texpr  (50)
	texpr : texpr . ADD texpr  (51)
	texpr : texpr . REF  (52)
	texpr : LPAREN texpr . RPAREN  (53)

	RPAREN  shift 105
	ADD  shift 74
	MUL  shift 75
	ARROW  shift 76
	REF  shift 106
	.  error


state 74
	texpr : texpr ADD . texpr  (51)

	LPAREN  shift 37
	BOOL  shift 38
	INTTYPE  shift 39
	UNITTYPE  shift 40
	.  error

	texpr  goto 107


state 75
	texpr : texpr MUL . texpr  (50)

	LPAREN  shift 37
	BOOL  shift 38
	INTTYPE  shift 39
	UNITTYPE  shift 40
	.  error

	texpr  goto 108


state 76
	texpr : texpr ARROW . texpr  (49)

	LPAREN  shift 37
	BOOL  shift 38
	INTTYPE  shift 39
	UNITTYPE  shift 40
	.  error

	texpr  goto 109


state 77
	simple_expr : REF . simple_expr  (12)
	texpr : texpr REF .  (52)

	.  reduce 52

	simple_expr  goto 47


state 78
	expr : expr . ADD expr  (16)
	expr : expr . SUB expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . MOD expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . EQUAL expr  (22)
	expr : expr . ANDOP expr  (23)
	expr : expr . OROP expr  (24)
	expr : expr . ASSIGN expr  (25)
	expr : INL texpr expr .  (30)

	.  reduce 30


state 79
	expr : expr . ADD expr  (16)
	expr : expr . SUB expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . MOD expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . EQUAL expr  (22)
	expr : expr . ANDOP expr  (23)
	expr : expr . OROP expr  (24)
	expr : expr . ASSIGN expr  (25)
	expr : INR texpr expr .  (31)

	.  reduce 31


state 80
	expr : FUN LPAREN args_fun . RPAREN ARROW expr  (32)

	RPAREN  shift 110
	.  error


state 81
	args_let : arg .  (36)
	args_fun : arg .  (38)

	RPAREN  reduce 38
	COMMA  reduce 36


state 82
	args_fun : args_let . COMMA args_let  (39)

	COMMA  shift 111
	.  error


state 83
	expr : CASE expr OF . INL LPAREN args_fun RPAREN ARROW expr BAR INR LPAREN args_fun RPAREN ARROW expr  (33)

	INL  shift 112
	.  error


state 84
	expr : WHILE expr DO . simple_expr  (26)

	INT  shift 3
	IDENT  shift 4
	LPAREN  shift 5
	NOT  shift 7
	WHAT  shift 8
	UNIT  shift 9
	TRUE  shift 10
	FALSE  shift 11
	REF  shift 20
	BANG  shift 21
	.  error

	simple_expr  goto 113


state 85
	expr : expr . ADD expr  (16)
	expr : expr ADD expr .  (16)
	expr : expr . SUB expr  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . MOD expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . EQUAL expr  (22)
	expr : expr . ANDOP expr  (23)
	expr : expr . OROP expr  (24)
	expr : expr . ASSIGN expr  (25)

	MUL  shift 54
	DIV  shift 55
	MOD  shift 56
	EQUAL  shift 57
	LT  shift 58
	ANDOP  shift 59
	OROP  shift 60
	ASSIGN  shift 61
	EOF  reduce 16
	RPAREN  reduce 16
	COMMA  reduce 16
	SEMICOLON  reduce 16
	ADD  reduce 16
	SUB  reduce 16
	THEN  reduce 16
	ELSE  reduce 16
	IN  reduce 16
	END  reduce 16
	BAR  reduce 16
	OF  reduce 16
	DO  reduce 16


state 86
	expr : expr . ADD expr  (16)
	expr : expr . SUB expr  (17)
	expr : expr SUB expr .  (17)
	expr : expr . MUL expr  (18)
	expr : expr . DIV expr  (19)
	expr : expr . MOD expr  (20)
	expr : expr . LT expr  (21)
	expr : expr . EQUAL expr  (22)
	expr : expr . ANDOP expr  (23)
	expr : expr . OROP expr  (24)
	expr : expr . ASSIGN expr  (25)
